fixed up button alignment and size

--- a/public/layout/sass/_editing.scss
+++ b/public/layout/sass/_editing.scss
@@ -42,7 +42,6 @@
 	
 	
 	.next-button {
-		padding-top: $pad;
 		padding-left: $pad;
 
 		.button {
